plugins {
    id "java"
}

sourceCompatibility = "14"

repositories {
    jcenter()
}

dependencies {
    compile project(":chess-core")

    compile "org.telegram:telegrambots:4.7"

    compile "ch.qos.logback:logback-classic:1.2.3"
}

compileJava {
    options.compilerArgs += ["--enable-preview"]
}

compileTestJava {
    options.compilerArgs += ["--enable-preview"]
}

test {
    useJUnitPlatform()
    jvmArgs "--enable-preview"
}

jar {
    manifest {
        attributes "Main-Class": "matvey.realchess.telegram.ChessBotApp"
    }
    from {
        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
    }
}